# FinLLM

./: .gitignore  README.md  main.py  notes.md  pyproject.toml
config/: input_stream_a.csv
data/: input_lens_search.csv  input_stream_b.csv  notes.md  query_documentation.md
docs/: plan_failure_extraction_v1.md  plan_failure_extraction_v2.md  research_log.md
src/: build_vectorstore.py  compare_models.py  download_papers.py  extract_failure_modes.py  lit_review_classify.py  lit_review_merge.py  lit_search_lens.py  llm_interface.py  parse_papers.py
